# rooster-rabbit-penguin-donut

./: .gitattributes  pyproject.toml
dashboard/: app.py
data/: Chicago_Resident.csv  Israeli_Citizen.csv  Persona_Baseline_System.csv  Persona_Baseline_User.csv  Police_High.csv  Police_Low.csv  exp3_tyler_t=0.csv  exp3_tyler_t=1.csv
experiments/: exp0.1_tyler.yaml  exp0.2_tyler.yaml  exp0.3_tyler.yaml  exp0.4_tyler.yaml  exp0.5_tyler.yaml  exp0.6_tyler.yaml  exp0.7_tyler.yaml  exp0.8_tyler.yaml  exp0_tyler.yaml  exp1.0.0_tyler.yaml  exp1.0.1_tyler.yaml  exp1.0.2_tyler.yaml  exp3.0.0_tyler_ant_t=1.yaml  exp3.0.0_tyler_open_source_t=0.yaml  exp3.1.0_tyler_oai_t=0.yaml  exp3.1.1_tyler_goog_t=0.yaml  exp3.1.2_tyler_ant_t=0.yaml  exp3.1.3_tyler_openrouter_t=0.yaml  exp4.0.0_persona_closed_t=1.yaml  exp4.0.1_persona_open_t=1.yaml  exp5.1.0_persona_closed.yaml  exp5.2.0_persona_closed.yaml  exp5.3.0_persona_closed.yaml  exp5.4.0_persona_closed.yaml  exp5.5.0_persona_closed.yaml  exp5.6.0_persona_closed.yaml  test_single.yaml
prompts/personas/: baseline.txt  baseline_chicago.txt  baseline_israel.txt  baseline_police_high.txt  baseline_police_low.txt  baseline_usa.txt
scripts/: process_async_experiment.py  process_batch_results.py  run_async_experiment.py  submit_batch.py
src/legal_attitudes/: __init__.py  api.py  batch.py  config.py  schemas.py
